--- a/app/src/main/res/layout/fragment_berita_detail_item.xml
+++ b/app/src/main/res/layout/fragment_berita_detail_item.xml
@@ -30,7 +30,7 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/imgBerita"
+                    android:id="@+id/imgBeritaDetail"
                     android:layout_width="0dp"
                     android:layout_height="120dp"
                     android:scaleType="centerCrop"
@@ -54,14 +54,14 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.052"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/imgBerita" />
+                    app:layout_constraintTop_toBottomOf="@+id/imgBeritaDetail" />
 
                 <Button
                     android:id="@+id/btnBacaBeritaPrevious"
                     style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="136dp"
+                    android:layout_marginStart="124dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="10dp"
                     android:onClick="@{clickListener::onClick}"
@@ -70,13 +70,14 @@
                     app:cornerRadius="20dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/txtDeskipsiBerita"
+                    app:layout_constraintTop_toBottomOf="@+id/txtPragraph"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <Button
                     android:id="@+id/btnBacaBeritaNext"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginBottom="10dp"
@@ -88,7 +89,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toEndOf="@+id/btnBacaBeritaPrevious"
-                    app:layout_constraintTop_toBottomOf="@+id/txtDeskipsiBerita"
+                    app:layout_constraintTop_toBottomOf="@+id/txtPragraph"
                     app:layout_constraintVertical_bias="1.0" />
 
                 <TextView
@@ -105,13 +106,13 @@
                     app:layout_constraintVertical_bias="0.013" />
 
                 <ProgressBar
-                    android:id="@+id/progressBarImageBerita"
+                    android:id="@+id/progressBarImageBeritaDetail"
                     style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="@+id/imgBerita"
+                    app:layout_constraintBottom_toBottomOf="@+id/imgBeritaDetail"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/imgBerita"
+                    app:layout_constraintStart_toStartOf="@+id/imgBeritaDetail"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -119,6 +120,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:layout_marginTop="5dp"
                     android:layout_marginEnd="20dp"
                     android:text="username"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +128,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/txtJudulBerita" />
 
                 <TextView
-                    android:id="@+id/txtDeskipsiBerita"
+                    android:id="@+id/txtPragraph"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
@@ -135,10 +137,10 @@
                     android:text="deskripsi"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView5" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtSubtitle" />
 
                 <TextView
-                    android:id="@+id/textView5"
+                    android:id="@+id/txtSubtitle"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
